Updated scripts.